--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -13,8 +13,8 @@ permalink: /projects/
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 1</a></h4>
-        <p>Laeva clamat qui Perseus erit, discrimine ramos illa <a href="sample-project/">restabat</a>: bracchia, templa, ab spectans. Monte contigit Rhodosque manus mille est omnia eiusdem nondum: qui Modo.</p>
+        <h4 class="project-title"><a href="nba-stats/">NBA Google Action</a></h4>
+        <p>An NBA statistics bot, intended primarily as an action for Google Assistant.</p>
       </div>
     </div>
 
