--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -6,22 +6,22 @@ desc: Side projects are fun.
 permalink: /projects/
 ---
 
-<p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
+<p>listed below are some of the things I've worked on in my free time.</p>
 
 <div class="projects">
   <div class="grid no-gutters">
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="nba-stats/">NBA Google Action</a></h4>
+        <h4 class="project-title"><a href="projects/nba-stats/">NBA Google Action</a></h4>
         <p>An NBA statistics bot, intended primarily as an action for Google Assistant.</p>
       </div>
     </div>
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 2</a></h4>
-        <p><em>Quoque videri</em>: sibi in qua nexibus rapto, Munychiosque bracchia sua pars, iram nec tonitruque. Quisquis thalamis Lyncides e remorum an omnibus monstri dempta. Mea tecta! Orbem haut non procumbit <em>facit</em>.</p>
+        <h4 class="project-title"><a href="https://github.com/yuhuanq/Club-Caml">Caml Messenger</a></h4>
+        <p>A STOMP messenger application written in OCaml, with a GTK gui.<p>
       </div>
     </div>
 
