--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -13,7 +13,7 @@ permalink: /projects/
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="projects/nba-stats/">NBA Google Action</a></h4>
+        <h4 class="project-title"><a href="nba-stats/">NBA Google Action</a></h4>
         <p>An NBA statistics bot, intended primarily as an action for Google Assistant.</p>
       </div>
     </div>
