--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -6,7 +6,7 @@ desc: Side projects are fun.
 permalink: /projects/
 ---
 
-<p>listed below are some of the things I've worked on in my free time.</p>
+<p>Listed below are some of the things I've worked on in my free time.</p>
 
 <div class="projects">
   <div class="grid no-gutters">
