--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -14,25 +14,28 @@ permalink: /projects/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="nba-stats/">NBA Google Action</a></h4>
-        <p>An NBA statistics bot, intended primarily as an action for Google Assistant.</p>
+        <p>An NBA statistics chat bot, intended primarily as an action for Google Assistant, with
+            a Node.js webhook.
+        </p>
       </div>
     </div>
 
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="https://github.com/yuhuanq/Club-Caml">Caml Messenger</a></h4>
-        <p>A STOMP messenger application written in OCaml, with a GTK gui.<p>
+        <p>A STOMP messenger application written in OCaml, with a GTK+ gui.<p>
       </div>
     </div>
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 3</a></h4>
-        <p>Tumefactum saepe, lactis, sibi ponto ut ad acie nam harundinis nostrae, totiens cerae, quamvis. Et in <strong>sata dies</strong> milite flectitur iste.</p>
+        <h4 class="project-title"><a href="https://github.com/Derrig/Cornell-Electric">Cornell Electric</a></h4>
+        <p>Flask web app that scrapes Cornell building energy data and displays the data
+            in intuitive ways.</p>
       </div>
     </div>
   </div><!-- grid -->
-
+  <!--
   <div class="grid no-gutters">
 
     <div class="unit one-third">
