--- a/_pages/work.html
+++ b/_pages/work.html
@@ -6,9 +6,9 @@ desc: Happy users, happy clients.
 permalink: /work/
 ---
 
-<p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
-
+<p>To be updated.</p>
 <div class="projects">
+  <!--
   <div class="grid no-gutters">
     <div class="unit one-third">
       <div class="project">
@@ -25,4 +25,3 @@ permalink: /work/
     </div>
   </div><!-- grid -->
 </div>
-
